Apply review feedback